remove react-custom-scrollbars due to bugs

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,21 +25,21 @@ body {
   text-align: center;
 }
 
-// html { // per https://github.com/mui-org/material-ui/issues/6656
-//   overflow-x: hidden !important;
-//   overflow-y: scroll !important;
-// }
+html { // per https://github.com/mui-org/material-ui/issues/6656
+  overflow-x: hidden !important;
+  overflow-y: scroll !important;
+}
 
-// body, #root { // per https://github.com/mui-org/material-ui/issues/6656
-//   height: 100% !important;
-//   width: 100% !important;
-//   margin: 0 !important;
-//   padding: 0 !important;
-// }
+body, #root { // per https://github.com/mui-org/material-ui/issues/6656
+  height: 100% !important;
+  width: 100% !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
 
-// nav { // per https://github.com/mui-org/material-ui/issues/6656
-//   padding: 0 !important;
-// }
+nav { // per https://github.com/mui-org/material-ui/issues/6656
+  padding: 0 !important;
+}
 
 // h1 {
 //   color: $main-heading-color;
